--- a/Answer_1_2rd/.vscode/settings.json
+++ b/Answer_1_2rd/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Answer_1.sln"
+    "dotnet.defaultSolution": "Answer_1_2rd.sln"
 }
